--- a/package.json
+++ b/package.json
@@ -5,36 +5,42 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ."
   },
+  // "dependencies": {
+  //   "axios": "^1.5.1",
+  //   "dotenv": "^16.3.1",
+  //   "node-fetch": "^3.2.6",
+  //   "node-telegram-bot-api": "^0.63.0",
+  //   "moment": "^2.29.4",
+  //   "validator": "^13.11.0",
+  // },
+  // "devDependencies": {
+  //   "@types/node": "^18.0.6",
+  //   "@types/node-telegram-bot-api": "^0.61.8",
+  //   "@types/validator": "^13.11.5",
+  //   "eslint": "^8.51.0",
+  //   "@typescript-eslint/eslint-plugin": "^6.7.5",
+  //   "@typescript-eslint/parser": "^6.7.5",
+  //   "eslint-config-prettier": "^9.0.0",
+  //   "eslint-plugin-prettier": "^5.0.1",
+  //   "prettier": "^3.0.3",
+  //   "typescript": "^5.2.2"
+  // },
+  "author": "David Almeida davyd.aguiar@hotmail.com",
+  "license": "MIT",
   "keywords": [
     "telegram",
-    "finance",
-    "cryptocurrency",
-    "bot"
-  ],
-  "author": "David Almeida davyd.aguiar@hotmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.0.6",
-    "@types/node-telegram-bot-api": "^0.61.8",
-    "axios": "^1.5.1",
-    "dotenv": "^16.3.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "moment": "^2.29.4",
-    "node-fetch": "^3.2.6",
-    "node-telegram-bot-api": "^0.63.0",
-    "prettier": "^3.0.3",
-    "types": "^0.1.1",
-    "typescript": "^5.2.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "eslint": "^8.51.0"
-  }
+    "telegram bot",
+    "telegram bot api",
+    "bot",
+    "binary options",
+    "investments",
+    "trading",
+    "cryptocurrencies",
+    "financial market"
+  ]
 }
