--- a/package.json
+++ b/package.json
@@ -5,31 +5,34 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.ts",
+    "start": "ts-node-esm src/index.ts",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ."
   },
-  // "dependencies": {
-  //   "axios": "^1.5.1",
-  //   "dotenv": "^16.3.1",
-  //   "node-fetch": "^3.2.6",
-  //   "node-telegram-bot-api": "^0.63.0",
-  //   "moment": "^2.29.4",
-  //   "validator": "^13.11.0",
-  // },
-  // "devDependencies": {
-  //   "@types/node": "^18.0.6",
-  //   "@types/node-telegram-bot-api": "^0.61.8",
-  //   "@types/validator": "^13.11.5",
-  //   "eslint": "^8.51.0",
-  //   "@typescript-eslint/eslint-plugin": "^6.7.5",
-  //   "@typescript-eslint/parser": "^6.7.5",
-  //   "eslint-config-prettier": "^9.0.0",
-  //   "eslint-plugin-prettier": "^5.0.1",
-  //   "prettier": "^3.0.3",
-  //   "typescript": "^5.2.2"
-  // },
+  "dependencies": {
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
+    "node-fetch": "^3.2.6",
+    "node-telegram-bot-api": "^0.63.0",
+    "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^18.0.6",
+    "@types/node-telegram-bot-api": "^0.61.8",
+    "@types/validator": "^13.11.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
   "author": "David Almeida davyd.aguiar@hotmail.com",
   "license": "MIT",
   "keywords": [
